# Robinhood_Copy_Trader

./: .gitignore  LICENSE  README.md  key-generator.py  key_generator.js  main.py  package-lock.json  package.json  pyproject.toml
backend/: RobinhoodService.py  main.py  pyproject.toml  run.sh
backend/app/: main.py
backend/app/account/: credentials 2.py  credentials.py  user.py
backend/app/models/requests/: execute_trade.py
backend/app/routers/: endpoints.py
backend/app/services/: coingecko_service.py  robinhood_service.py
backend/app/services/security/: encrypt_keys.py  generate_encryption_key.py  secureconfig.py
backend/profiles/: profiles.json
frontend/echo/: code.txt  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/echo/components/: EmblaCarousel.tsx  EmblaCarouselArrowButtons.tsx  Profile.tsx  carousel.tsx  nav.tsx  navigation.tsx  profiles.tsx
frontend/echo/src/app/: embla.css  layout.tsx  page.tsx
frontend/echo/src/app/login/: page.tsx
frontend/echo/src/app/signin/: page.tsx
frontend/echo/src/app/testCarousel/: page.tsx
frontend/echo/src/app/testNav/: page.tsx
frontend/echo/src/app/user_dashboard/: page.tsx
frontend/echo/src/components/: navigation.tsx
frontend/echo/src/components/pages/landing-page/typewriter/: animatedText.tsx  cursorBlinker.tsx
frontend/echo/src/models/: models.ts
frontend/echo/src/types/: types.ts
