[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["isadhwani <isadhwani16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^42.0.8"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "run uvicorn app:main --reload"
